--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,20 @@
+// {
+//   "version": 2,
+//   "builds": [
+//     {
+//       "src": "./index.js",
+//       "use": "@vercel/node"
+//     }
+//   ],
+//   "routes": [
+//     {
+//       "src": "/(.*)",
+//       "dest": "index.js",
+//       "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
+//     }
+//   ]
+// }
+
 {
   "version": 2,
   "builds": [
@@ -9,8 +26,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "index.js",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
+      "dest": "index.js"
     }
   ]
 }
